@@ -231,6 +231,12 @@
 		matches.
 	  </dd>
 	  <dt>
+		<b>METADESCRIPTION</b>
+	  </dt>
+	  <dd>
+		The meta description text (if any) for the matched document.
+	  </dd>
+	  <dt>
 		<b>METHOD</b>
 	  </dt>
 	  <dd>
@@ -418,7 +424,7 @@
 	  <a href="author.html">Andrew Scherpbier &lt;andrew@contigo.com&gt;</a>
 	</address>
 
-Last modified: $Date: 2001/06/07 19:16:00 $
+Last modified: $Date: 2001/07/24 18:44:06 $
 
   </body>
 </html>
